removed ccd hard dependency

--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -5,6 +5,9 @@ spring.datasource.username=payment
 spring.datasource.password=payment
 spring.datasource.driver=org.postgresql.Driver
 
+#Removes CCD Hard dependency
+spring.autoconfigure.exclude=uk.gov.hmcts.reform.ccd.client.CoreCaseDataClientAutoConfiguration
+
 spring.liquibase.enabled=${SPRING_LIQUIBASE_ENABLED:true}
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 # GovPay & Key Configuration
