--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.datasource.username=${POSTGRES_USERNAME:payment}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver=org.postgresql.Driver
 
+#Removes CCD Hard dependency
+spring.autoconfigure.exclude=uk.gov.hmcts.reform.ccd.client.CoreCaseDataClientAutoConfiguration
+
+
 #HikariCP Settings
 spring.datasource.hikari.leak-detection-threshold=60000
 logging.level.com.zaxxer.hikari=debug
