--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,36 @@ allprojects {
         jcenter()
         maven { url 'https://repo.spring.io/libs-milestone' }
     }
+    configurations.all {
+        resolutionStrategy {
+            eachDependency { DependencyResolveDetails det ->
+                if (det.requested.name == 'tomcat-embed-core') {
+                    det.useVersion '9.0.41'
+                }
+
+                if (det.requested.name == 'tomcat-embed-websocket') {
+                    det.useVersion '9.0.41'
+                }
+                if (det.requested.group == 'com.fasterxml.jackson.core') {
+                    det.useVersion '2.12.0'
+                }
+
+                if (det.requested.name == 'launchdarkly-java-server-sdk') {
+                    det.useVersion '5.2.1'
+                }
+
+                if (det.requested.name == 'handlebars') {
+                    det.useVersion '4.2.0'
+                }
+
+                if (det.requested.name == 'bcprov-jdk15on') {
+                    det.useVersion '1.68'
+                }
+
+            }
+        }
+    }
+
     dependencyManagement {
         imports {
             mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
@@ -101,7 +131,6 @@ subprojects {
             exceptionFormat = 'full'
         }
     }
-
     dependencies {
         compile ('com.sun.xml.bind:jaxb-osgi:2.3.1')
         testCompile 'io.github.openfeign:feign-jackson:9.7.0'
@@ -111,7 +140,7 @@ subprojects {
         compile group:'org.apache.poi', name: 'poi-ooxml', version: '4.1.2'
         compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.0.4'
         testCompile group: 'junit', name: 'junit', version: '4.12'
-        testCompile group: 'org.assertj', name: 'assertj-core', version: '3.18.1'
+        testCompile group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
         compileOnly group: 'net.sourceforge.findbugs', name: 'annotations', version: '1.3.2'
         compile group: 'org.owasp.encoder', name: 'encoder', version: '1.2.2'
         compile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.23.2'
