--- a/charts/payment-api/values.yaml
+++ b/charts/payment-api/values.yaml
@@ -72,7 +72,7 @@ java:
     FEATURE_PAYMENTS_SEARCH: "true"
     FEATURE_SERVICE_CALLBACK: "true"
     PAYMENT_S2S_MICROSERVICE_NAME: payment_app
-    PBA_CONFIG1_SERVICE_NAMES: PROBATE,CMC
+    PBA_CONFIG1_SERVICE_NAMES: CMC
     SERVER_SHUTDOWN_STRATEGY: graceful
     TIMEOUT_SERVER_SHUTDOWN_PHASE: 30s
 
