--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ allprojects {
         maven { url 'https://repo.spring.io/libs-milestone' }
     }
 
-    apply from: "${rootDir}/cve-resolution-strategy.gradle"
+//    apply from: "${rootDir}/cve-resolution-strategy.gradle"
 
     dependencyManagement {
         imports {
