added postgres container dependecncy

--- a/build.gradle
+++ b/build.gradle
@@ -153,6 +153,7 @@ subprojects {
         annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
         testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
         implementation 'org.springframework.boot:spring-boot-starter-validation'
+        testCompile 'org.testcontainers:postgresql:1.15.1'
         compile(group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.7.3') {
             sourceSets {
                 main {
