--- a/build.gradle
+++ b/build.gradle
@@ -128,7 +128,7 @@ subprojects {
         compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
         annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
         testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
-
+        compile 'org.jetbrains:annotations:16.0.2'
     }
 }
 
