Revert "Updated Enum and Controllers"
This reverts commit 8781a1569cd739ce82cf8bb19b6876dc65de5779.

--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -92,8 +92,8 @@ launchDarkly.socketTimeout=3
 launchDarkly.flushInterval=10
 
 bulk.scanning.payments.processed.url=http://localhost:8004
-idam.s2s-auth.totp_secret=${PAYMENT_S2S_SECRET:ETNY5CBN7NR62T6M}
-idam.s2s-auth.microservice=${PAYMENT_S2S_MICROSERVICE_NAME:payment_app}
+idam.s2s-auth.totp_secret=${PAYMENT_S2S_SECRET:AAAAAAAAAAAAAAAA}
+idam.s2s-auth.microservice=${PAYMENT_S2S_MICROSERVICE_NAME:internal}
 pba.config1.service.names=${PBA_CONFIG1_SERVICE_NAMES:PROBATE,CMC}
 
 rd.location.url=http://localhost:8099
