--- a/charts/payment-api/values.preview.template.yaml
+++ b/charts/payment-api/values.preview.template.yaml
@@ -18,7 +18,7 @@ java:
     #Below key required for preview pipeline
     GOV_PAY_AUTH_KEY_CMC: 8ln764q6jrbgqvvvv40uggsea3h1p602v79gdrt7ni66mrmpk416ulohvd
     LAUNCH_DARKLY_SDK_KEY: sdk-06456c8b-312c-475c-b154-ca585f5ca063
-    CCPAY_BULK_SCANNING_API_URL: http://ccpay-bulkscanning-api-aat.service.core-compute-aat.internal
+    CCPAY_BULK_SCANNING_API_URL: http://ccpay-bulkscanning-api-pr-285.service.core-compute-preview.internal/
     PAYMENT_S2S_SECRET: ETNY5CBN7NR62T6M
 
     PCI_PAL_API_URL: https://ip3cloud.com/clients/hmcts/payments/index.php
