--- a/api/build.gradle
+++ b/api/build.gradle
@@ -73,7 +73,7 @@ dependencies {
   compile group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: javaLoggingVersion
   compile group: 'uk.gov.hmcts.reform', name: 'logging-spring', version: javaLoggingVersion
   compile group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.3'
-  compile (group: 'uk.gov.hmcts.reform', name: 'http-proxy-spring-boot-autoconfigure', version:'2.0.0')
+//  compile (group: 'uk.gov.hmcts.reform', name: 'http-proxy-spring-boot-autoconfigure', version:'2.0.0')
   compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
   compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.reformS2sClient
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
@@ -105,15 +105,12 @@ dependencies {
     compile group: 'io.github.openfeign', name: 'feign-core', version: '10.7.0'
     compile group: 'org.springframework.cloud', name: 'spring-cloud-openfeign-core', version: '2.2.1.RELEASE'
     //Added this for spring boot upgrade as swagger was not working with the latest version.
-    compile group: 'org.springframework.plugin', name: 'spring-plugin-core', version: '1.2.0.RELEASE'
-    compile(group: 'org.springframework.hateoas', name: 'spring-hateoas', version: '1.0.4.RELEASE') {
+    compile group: 'org.springframework.plugin', name: 'spring-plugin-core', version: '2.0.0.RELEASE'
+    compile(group: 'org.springframework.hateoas', name: 'spring-hateoas', version: '1.2.3.RELEASE') {
         exclude(module: 'spring-plugin-core')
     }
     // End of OpenId Connect.
 
-    implementation "io.github.openfeign:feign-httpclient:10.7.0"
-    compile group: 'io.github.openfeign', name: 'feign-core', version: '10.7.0'
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-openfeign-core', version: '2.2.1.RELEASE'
     compile group: 'org.ff4j', name: 'ff4j-spring-boot-web-api', version: '1.7.1'
     compile group: 'org.ff4j', name: 'ff4j-web', version: '1.7.1'
     compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
@@ -129,7 +126,7 @@ dependencies {
     compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-api-contract', version: '2.3.0'
     compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-model', version: '2.3.0'
     compile group: 'com.netflix.feign', name: 'feign-jackson', version: '8.18.0'
-    compile group: 'uk.gov.hmcts.reform', name: 'health-spring-boot-starter', version: '0.0.5'
+//    compile group: 'uk.gov.hmcts.reform', name: 'health-spring-boot-starter', version: '0.0.5'
     compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version:'0.0.4'
     //Added this for spring boot upgrade as swagger was not working with the latest version.
     compile group: 'org.springframework.plugin', name: 'spring-plugin-core', version: '1.2.0.RELEASE'
