--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -5,6 +5,8 @@ spring.datasource.username=payment
 spring.datasource.password=payment
 spring.datasource.driver=org.postgresql.Driver
 
+server.port=8081
+
 spring.liquibase.enabled=${SPRING_LIQUIBASE_ENABLED:true}
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 # GovPay & Key Configuration
@@ -14,7 +16,7 @@ gov.pay.url=https://publicapi.payments.service.gov.uk/v1/payments
 auth.idam.client.baseUrl=http://localhost:23443
 auth.provider.service.client.baseUrl=http://localhost:23443
 
-trusted.s2s.service.names=cmc,probate_frontend,divorce_frontend,ccd_gw,bar_api,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac,unspec_service,probate_backend
+trusted.s2s.service.names=paybubble,cmc,probate_frontend,divorce_frontend,ccd_gw,bar_api,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac,unspec_service,probate_backend
 
 card.payments.report.scheduler.enabled = ${CARD_PAYMENTS_REPORT_SCHEDULER_ENABLED:true}
 card.payments.email.from=${CARD_PAYMENTS_EMAIL_FROM:dummy@gmail.com}
@@ -94,7 +96,7 @@ launchDarkly.flushInterval=10
 bulk.scanning.payments.processed.url=http://localhost:8004
 idam.s2s-auth.totp_secret=${PAYMENT_S2S_SECRET:AAAAAAAAAAAAAAAA}
 idam.s2s-auth.microservice=${PAYMENT_S2S_MICROSERVICE_NAME:internal}
-idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:localhost:8489}
+idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:localhost:8085}
 
 pba.config1.service.names=${PBA_CONFIG1_SERVICE_NAMES:CMC}
 server.shutdown=graceful
@@ -108,7 +110,7 @@ spring.security.oauth2.client.registration.oidc.client-secret=internal
 oidc.audience-list=paybubble,cmc_citizen
 oidc.issuer=${OIDC_ISSUER:http://fr-am:8080/openam/oauth2/hmcts}
 idam.api.url=${AUTH_IDAM_CLIENT_BASEURL:http://localhost:5000}
-s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
-s2s-auth.totp_secret=AAAAAAAAAAAAAAAC
-s2s-auth.microservice=ccpay_bubble
+s2s-authorised.services=payment_app,cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
+s2s-auth.totp_secret=AAAAAAAAAAAAAAAB
+s2s-auth.microservice=payment_app
 
