--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -94,9 +94,7 @@ launchDarkly.socketTimeout=3
 launchDarkly.flushInterval=10
 
 bulk.scanning.payments.processed.url=http://localhost:8004
-idam.s2s-auth.totp_secret=${PAYMENT_S2S_SECRET:AAAAAAAAAAAAAAAA}
-idam.s2s-auth.microservice=${PAYMENT_S2S_MICROSERVICE_NAME:internal}
-idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:localhost:8085}
+
 
 pba.config1.service.names=${PBA_CONFIG1_SERVICE_NAMES:CMC}
 server.shutdown=graceful
@@ -110,7 +108,10 @@ spring.security.oauth2.client.registration.oidc.client-secret=internal
 oidc.audience-list=paybubble,cmc_citizen
 oidc.issuer=${OIDC_ISSUER:http://fr-am:8080/openam/oauth2/hmcts}
 idam.api.url=${AUTH_IDAM_CLIENT_BASEURL:http://localhost:5000}
-s2s-authorised.services=payment_app,cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
+s2s-authorised.services=paybubble,payment_app,cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
 s2s-auth.totp_secret=AAAAAAAAAAAAAAAB
 s2s-auth.microservice=payment_app
+idam.s2s-auth.totp_secret=AAAAAAAAAAAAAAAB
+idam.s2s-auth.microservice=payment_app
+idam.s2s-auth.url=http://localhost:8085
 
