--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -107,7 +107,7 @@ spring.security.oauth2.client.registration.oidc.client-id=internal
 spring.security.oauth2.client.registration.oidc.client-secret=internal
 oidc.audience-list=paybubble,cmc_citizen
 oidc.issuer=${OIDC_ISSUER:http://fr-am:8080/openam/oauth2/hmcts}
-idam.api.url=${AUTH_IDAM_CLIENT_BASEURL:http://localhost:5000}
+idam.api.url=http://localhost:5000
 s2s-authorised.services=paybubble,payment_app,cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
 s2s-auth.totp_secret=AAAAAAAAAAAAAAAB
 s2s-auth.microservice=payment_app
