--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -13,10 +13,10 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 gov.pay.auth.key.probate_frontend=fillThisOut
 gov.pay.url=https://publicapi.payments.service.gov.uk/v1/payments
 
-auth.idam.client.baseUrl=http://localhost:23443
-auth.provider.service.client.baseUrl=http://localhost:23443
+auth.idam.client.baseUrl=http://localhost:5000
+auth.provider.service.client.baseUrl=http://localhost:8085
 
-trusted.s2s.service.names=paybubble,cmc,probate_frontend,divorce_frontend,ccd_gw,bar_api,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac,unspec_service,probate_backend
+trusted.s2s.service.names=payment_app,paybubble,cmc,probate_frontend,divorce_frontend,ccd_gw,bar_api,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac,unspec_service,probate_backend
 
 card.payments.report.scheduler.enabled = ${CARD_PAYMENTS_REPORT_SCHEDULER_ENABLED:true}
 card.payments.email.from=${CARD_PAYMENTS_EMAIL_FROM:dummy@gmail.com}
@@ -103,9 +103,9 @@ spring.lifecycle.timeout-per-shutdown-phase=30s
 # OpenId Changes
 spring.security.oauth2.client.provider.oidc.issuer-uri=${IDAM_API_URL:http://localhost:5000}/o
 # Dummy OIDC client required even we are not going to use
-spring.security.oauth2.client.registration.oidc.client-id=internal
-spring.security.oauth2.client.registration.oidc.client-secret=internal
-oidc.audience-list=paybubble,cmc_citizen
+spring.security.oauth2.client.registration.oidc.client-id=payment_app
+spring.security.oauth2.client.registration.oidc.client-secret=payment_app
+oidc.audience-list=payment_app,paybubble,cmc_citizen
 oidc.issuer=${OIDC_ISSUER:http://fr-am:8080/openam/oauth2/hmcts}
 idam.api.url=http://localhost:5000
 s2s-authorised.services=paybubble,payment_app,cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
@@ -114,4 +114,6 @@ s2s-auth.microservice=payment_app
 idam.s2s-auth.totp_secret=AAAAAAAAAAAAAAAB
 idam.s2s-auth.microservice=payment_app
 idam.s2s-auth.url=http://localhost:8085
+logging.level.org.springframework.security=DEBUG
+
 
