--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -9,6 +9,7 @@ server.port=8081
 
 spring.liquibase.enabled=${SPRING_LIQUIBASE_ENABLED:true}
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+
 # GovPay & Key Configuration
 gov.pay.auth.key.probate_frontend=fillThisOut
 gov.pay.url=https://publicapi.payments.service.gov.uk/v1/payments
@@ -105,12 +106,10 @@ spring.security.oauth2.client.provider.oidc.issuer-uri=${IDAM_API_URL:http://loc
 # Dummy OIDC client required even we are not going to use
 spring.security.oauth2.client.registration.oidc.client-id=payment_app
 spring.security.oauth2.client.registration.oidc.client-secret=payment_app
-oidc.audience-list=payment_app,paybubble,cmc_citizen
+oidc.audience-list=paybubble,cmc_citizen
 oidc.issuer=${OIDC_ISSUER:http://fr-am:8080/openam/oauth2/hmcts}
 idam.api.url=http://localhost:5000
-s2s-authorised.services=paybubble,payment_app,cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
-s2s-auth.totp_secret=AAAAAAAAAAAAAAAB
-s2s-auth.microservice=payment_app
+idam.s2s-authorised.services=payment_app,cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
 idam.s2s-auth.totp_secret=AAAAAAAAAAAAAAAB
 idam.s2s-auth.microservice=payment_app
 idam.s2s-auth.url=http://localhost:8085
