feature check test

--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -75,7 +75,7 @@ management.endpoint.health.show-details=always
 
 fees.register.url=https://fees-register-api.platform.hmcts.net
 
-feature.payments.search=false
+feature.payments.search=true
 feature.payments.service.callback=false
 feature.payments.cancel=true
 feature.case.reference.validation=false
