--- a/charts/payment-api/values.preview.template.yaml
+++ b/charts/payment-api/values.preview.template.yaml
@@ -15,6 +15,13 @@ java:
     SPRING_PROFILES_ACTIVE: "liberataMock,callbackMock,ccdMock"
     CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINUTES: 0
 
+    SPRING_CLOUD_PROPERTIESVOLUME_ENABLED: false
+    OIDC_CLIENT_SECRET: ***REMOVED***
+    OIDC_S2S_SECRET: G5XTFNBUW4P6ZP4F
+
+    SPRING_PROFILES_ACTIVE: "liberataMock,callbackMock,ccdMock"
+    CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINUTES: 0
+
     #Below key required for preview pipeline
     GOV_PAY_AUTH_KEY_CMC: 8ln764q6jrbgqvvvv40uggsea3h1p602v79gdrt7ni66mrmpk416ulohvd
     LAUNCH_DARKLY_SDK_KEY: sdk-06456c8b-312c-475c-b154-ca585f5ca063
