--- a/charts/payment-api/values.preview.template.yaml
+++ b/charts/payment-api/values.preview.template.yaml
@@ -20,6 +20,13 @@ java:
     LAUNCH_DARKLY_SDK_KEY: sdk-06456c8b-312c-475c-b154-ca585f5ca063
     CCPAY_BULK_SCANNING_API_URL: http://ccpay-bulkscanning-api-pr-285.service.core-compute-preview.internal/
     PAYMENT_S2S_SECRET: ETNY5CBN7NR62T6M
+    card.payments.email.to: vignesh.pushkaran@hmcts.net
+    bar.payments.email.to: vignesh.pushkaran@hmcts.net
+    pba.cmc.payments.email.to: vignesh.pushkaran@hmcts.net
+    pba.probate.payments.email.to: vignesh.pushkaran@hmcts.net
+    pba.finrem.payments.email.to: vignesh.pushkaran@hmcts.net
+    pba.divorce.payments.email.to: vignesh.pushkaran@hmcts.net
+    pba.fpl.payments.email.to: vignesh.pushkaran@hmcts.net
 
     PCI_PAL_API_URL: https://ip3cloud.com/clients/hmcts/payments/index.php
   keyVaults:
