app-local,test cases and service auth changes made

--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -5,8 +5,6 @@ spring.datasource.username=payment
 spring.datasource.password=payment
 spring.datasource.driver=org.postgresql.Driver
 
-server.port=8081
-
 spring.liquibase.enabled=${SPRING_LIQUIBASE_ENABLED:true}
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 
@@ -75,7 +73,7 @@ management.endpoint.health.show-details=always
 
 fees.register.url=https://fees-register-api.platform.hmcts.net
 
-feature.payments.search=true
+feature.payments.search=false
 feature.payments.service.callback=false
 feature.payments.cancel=true
 feature.case.reference.validation=false
