--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -149,6 +149,6 @@ launchDarkly.flushInterval=10
 pba.config1.service.names=${PBA_CONFIG1_SERVICE_NAMES:dummy}
 
 
-rd.location.url=${RD_LOCATION_BASE_URL:http://rd-location-ref-api-aat.service.core-compute-aat.internal}
+rd.location.url=${RD_LOCATION_BASE_URL:http://dummy.dummy.net}
 server.shutdown=${SERVER_SHUTDOWN_STRATEGY:graceful}
 spring.lifecycle.timeout-per-shutdown-phase=${TIMEOUT_SERVER_SHUTDOWN_PHASE:30s}
