--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -150,3 +150,4 @@ pba.config1.service.names=${PBA_CONFIG1_SERVICE_NAMES:dummy}
 
 server.shutdown=${SERVER_SHUTDOWN_STRATEGY:graceful}
 spring.lifecycle.timeout-per-shutdown-phase=${TIMEOUT_SERVER_SHUTDOWN_PHASE:30s}
+liberata.api.functional.test.mock.account=PBA1111111
