Final version of code change.

--- a/api/src/functionalTest/resources/application-functional-tests.properties
+++ b/api/src/functionalTest/resources/application-functional-tests.properties
@@ -28,3 +28,4 @@ launchDarkly.connectionTimeout=3
 launchDarkly.socketTimeout=3
 launchDarkly.flushInterval=10
 pba.config1.service.names=${PBA_CONFIG1_SERVICE_NAMES:CMC}
+liberata.api.functional.test.mock.account=PBAFunctional
