--- a/api/src/test/resources/application-componenttest.properties
+++ b/api/src/test/resources/application-componenttest.properties
@@ -93,4 +93,4 @@ idam.s2s-auth.microservice=${PAYMENT_S2S_MICROSERVICE_NAME:internal}
 idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:localhost:8489}
 spring.datasource.hikari.maximum-pool-size=2
 pba.config1.service.names=${PBA_CONFIG1_SERVICE_NAMES:CMC}
-liberata.api.functional.test.mock.account=PBA1111111
+liberata.api.functional.test.mock.account=PBAFunctional
