--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -99,4 +99,4 @@ idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:localhost:8489}
 pba.config1.service.names=${PBA_CONFIG1_SERVICE_NAMES:CMC}
 server.shutdown=graceful
 spring.lifecycle.timeout-per-shutdown-phase=30s
-liberata.api.functional.test.mock.account=PBA1111111
+liberata.api.functional.test.mock.account=PBAFunctional
