--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -83,7 +83,7 @@ feature.discontinued.fees=true
 azure.application-insights.instrumentation-key=${APPINSIGHTS_INSTRUMENTATIONKEY:dummy}
 azure.servicebus.connection-string=${ASB_CONNECTION_STRING:dummy}
 
-payments.account.existing.account.number=PBA0081334
+payments.account.existing.account.number=PBAFUNC12345
 payments.account.fake.account.number=QWERTYUIOP
 
 launch.darkly.sdk.key=${LAUNCH_DARKLY_SDK_KEY:sdk-06456c8b-312c-475c-b154-ca585f5ca063}
