--- a/charts/payment-api/values.preview.template.yaml
+++ b/charts/payment-api/values.preview.template.yaml
@@ -15,7 +15,7 @@ java:
     SPRING_PROFILES_ACTIVE: "liberataMock,callbackMock,ccdMock"
     CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINUTES: 0
     CCPAY_BULK_SCANNING_API_URL: http://ccpay-bulkscanning-api-aat.service.core-compute-aat.internal
-    PBA_CONFIG1_SERVICE_NAMES: PROBATE
+    PBA_CONFIG1_SERVICE_NAMES: CMC
     PCI_PAL_ANTENNA_TENANT_NAME: HMCTS
     PCI_PAL_ANTENNA_USER_NAME: APIUser
     PCI_PAL_ANTENNA_CLIENT_ID: HMCTSStage
