--- a/charts/payment-api/values.yaml
+++ b/charts/payment-api/values.yaml
@@ -32,7 +32,7 @@ java:
     CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINUTES: 2
 
     GOV_PAY_URL: "https://publicapi.payments.service.gov.uk/v1/payments"
-    GOV_PAY_OPERATIONAL_SERVICES: "ccd_gw,api_gw"
+    GOV_PAY_OPERATIONAL_SERVICES: "ccd_gw,api_gw,xui_webapp"
     PCI_PAL_CALLBACK_URL: https://core-api-mgmt-{{ .Values.global.environment }}.azure-api.net/telephony-api/telephony/callback
 
     TRUSTED_S2S_SERVICE_NAMES: "cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service"
