--- a/charts/payment-api/values.preview.template.yaml
+++ b/charts/payment-api/values.preview.template.yaml
@@ -15,19 +15,6 @@ java:
     SPRING_PROFILES_ACTIVE: "liberataMock,callbackMock,ccdMock"
     CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINUTES: 0
     CCPAY_BULK_SCANNING_API_URL: http://ccpay-bulkscanning-api-aat.service.core-compute-aat.internal
-    PBA_CONFIG1_SERVICE_NAMES: CMC
-    PCI_PAL_ANTENNA_TENANT_NAME: HMCTS
-    PCI_PAL_ANTENNA_USER_NAME: APIUser
-    PCI_PAL_ANTENNA_CLIENT_ID: HMCTSStage
-    PCI_PAL_ANTENNA_CLIENT_SECRET: Vm82kOUZAf9U4Kms3hIQM03jqsDQKc8aHIGy5I9y
-    PCI_PAL_ANTENNA_GET_TOKENS_URL: https://pcipalstaging.cloud/api/v1/token
-    PCI_PAL_ANTENNA_LAUNCH_URL: https://euwest1.pcipalstaging.cloud/api/v1/session/303/launch
-    PCI_PAL_ANTENNA_VIEW_ID_URL: https://euwest1.pcipalstaging.cloud/session/303/view/
-    PCI_PAL_ANTENNA_RETURN_URL: http://localhost
-    PCI_PAL_ANTENNA_CMC_FLOW_ID: 1356
-    PCI_PAL_ANTENNA_PROBATE_FLOW_ID: 1356
-    PCI_PAL_ANTENNA_DIVORCE_FLOW_ID: 1356
-    PCI_PAL_ANTENNA_FINANCIAL_REMEDY_FLOW_ID: 1356
   keyVaults:
     "ccpay":
       resourceGroup: ccpay
@@ -35,5 +22,17 @@ java:
         - gov-pay-keys-cmc
         - launch-darkly-sdk-key
         - payment-s2s-secret
+        - pci-pal-antenna-tenant-name
+        - pci-pal-antenna-user-name
+        - pci-pal-antenna-client-id
+        - pci-pal-antenna-client-secret
+        - pci-pal-antenna-get-tokens-url
+        - pci-pal-antenna-launch-url
+        - pci-pal-antenna-view-id-url
+        - pci-pal-antenna-return-url
+        - pci-pal-antenna-cmc-flow-id
+        - pci-pal-antenna-probate-flow-id
+        - pci-pal-antenna-divorce-flow-id
+        - pci-pal-antenna-financial-remedy-flow-id
   postgresql:
     enabled: true
