--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -1,8 +1,8 @@
 spring.application.name=payment
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/paymentOrder1
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/payment
+spring.datasource.username=payment
+spring.datasource.password=payment
 spring.datasource.driver=org.postgresql.Driver
 spring.autoconfigure.exclude=uk.gov.hmcts.reform.ccd.client.CoreCaseDataClientAutoConfiguration
 
