PAY-3900: Fix publish verification

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -192,6 +192,7 @@ task providerContractTest(type: Test) {
     testClassesDirs = sourceSets.contractTest.output.classesDirs
     classpath = sourceSets.contractTest.runtimeClasspath
     systemProperty 'pact.rootDir', "pacts"
+    systemProperty 'pact.verifier.publishResults', System.getProperty('pact.verifier.publishResults')
     systemProperty 'pact.provider.version', project.pactVersion
 
 }
