--- a/api/src/functionalTest/resources/application-functional-tests.properties
+++ b/api/src/functionalTest/resources/application-functional-tests.properties
@@ -1,4 +1,4 @@
-test.url=${TEST_URL:http://payment-api-pr-803.service.core-compute-preview.internal}
+test.url=${TEST_URL:http://localhost:8000}
 # Idam oauth2 settings
 idam.api.url=${IDAM_API_URL:https://idam-api.aat.platform.hmcts.net}
 
