CPO-20 new getCasePaymentOrders endpoint

--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -12,6 +12,8 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 gov.pay.auth.key.probate_frontend=fillThisOut
 gov.pay.url=https://publicapi.payments.service.gov.uk/v1/payments
 
+cpo.get-case-payment-orders.url=${CPO_URL:http://localhost:5555}/api/case-payment-orders
+
 auth.idam.client.baseUrl=http://localhost:23443
 auth.provider.service.client.baseUrl=http://localhost:23443
 
