--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -49,6 +49,8 @@ gov.pay.auth.key.divorce_frontend=${GOV_PAY_AUTH_KEY_DIVORCE_FRONTEND:#{divorce_
 gov.pay.url=${GOV_PAY_URL:#{https://publicapi.payments.service.gov.uk/v1/payments}}
 gov.pay.operational_services=${GOV_PAY_OPERATIONAL_SERVICES:#{ccd_gw,api_gw}}
 
+cpo.get-case-payment-orders.url=${CPO_URL:http://localhost:5555}/api/case-payment-orders
+
 # S2S trusted services
 idam.s2s-auth.totp_secret=${PAYMENT_S2S_SECRET:AAAAAAAAAAAAAAAA}
 idam.s2s-auth.microservice=${PAYMENT_S2S_MICROSERVICE_NAME:payment_app}
