CPO-20 Configure Case Payment Orders url

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -31,6 +31,9 @@ paybubble.home.url=${PAYBUBBLE_HOME_URL:https://test.url.com}
 #CCD Data Store
 core_case_data.api.url=${CORE_CASE_DATA_API_URL:http://localhost:4452}
 
+# Case Payment Orders
+case-payment-orders.api.url=${CASE_PAYMENT_ORDERS_API_URL:http://localhost:4457}
+
 # Liberata
 liberata.api.account.url=${LIBERATA_API_ACCOUNT_URL:https://bpacustomerportal.liberata.com/pba/public/api/v2/account}
 liberata.oauth2.client.id=${LIBERATA_OAUTH2_CLIENT_ID:id}
@@ -48,8 +51,6 @@ gov.pay.auth.key.probate_frontend=${GOV_PAY_AUTH_KEY_PROBATE_FRONTEND:#{probate_
 gov.pay.auth.key.divorce_frontend=${GOV_PAY_AUTH_KEY_DIVORCE_FRONTEND:#{divorce_key}}
 gov.pay.url=${GOV_PAY_URL:#{https://publicapi.payments.service.gov.uk/v1/payments}}
 gov.pay.operational_services=${GOV_PAY_OPERATIONAL_SERVICES:#{ccd_gw,api_gw}}
-
-cpo.get-case-payment-orders.url=${CPO_URL:http://localhost:5555}/api/case-payment-orders
 
 # S2S trusted services
 idam.s2s-auth.totp_secret=${PAYMENT_S2S_SECRET:AAAAAAAAAAAAAAAA}
