--- a/api/src/test/resources/application-componenttest.properties
+++ b/api/src/test/resources/application-componenttest.properties
@@ -7,7 +7,8 @@ liberata.api.account.url=http://liberata.com
 
 gov.pay.url=http://localhost:${wiremock.port}/v1/payments
 
-cpo.get-case-payment-orders.url=http://localhost:${wiremock.port}/api/case-payment-orders
+# Case Payment Orders
+case-payment-orders.api.url=http://localhost:${wiremock.port}
 
 auth.externalProvider.service.client.baseUrl=http://any.url/
 
