--- a/case-payment-orders-client/build.gradle
+++ b/case-payment-orders-client/build.gradle
@@ -1,8 +1,14 @@
 def versions = [
-        reformS2sClient    : '3.1.1'
+        reformS2sClient : '3.1.1',
+        junit           : '5.7.1',
+        junitPlatform   : '1.7.1'
 ]
 
 description = 'Managing case payment orders'
+
+test {
+    useJUnitPlatform()
+}
 
 dependencies {
     compile group: 'org.springframework', name: 'spring-context', version: '5.1.3.RELEASE'
@@ -12,8 +18,8 @@ dependencies {
     compile "com.fasterxml.jackson.core:jackson-databind:2.11.4"
     compile group: 'io.springfox', name: 'springfox-swagger2', version:'2.9.2'
 
-    testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test') {
-        exclude(module: 'commons-logging')
+    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
+        exclude group: 'junit', module: 'junit'
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
-
 }
