--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ allprojects {
         maven { url "https://dl.bintray.com/hmcts/hmcts-maven" }
         jcenter()
         maven { url 'https://repo.spring.io/libs-milestone' }
+        maven { url 'https://jitpack.io' }
     }
 
     apply from: "${rootDir}/cve-resolution-strategy.gradle"
@@ -104,6 +105,7 @@ subprojects {
         }
     }
     dependencies {
+        implementation('com.github.hmcts:ccpay-payment-app:2.0')
         compile ('com.sun.xml.bind:jaxb-osgi:2.3.1')
         testCompile 'io.github.openfeign:feign-jackson:9.7.0'
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.10.0'
