--- a/api/build.gradle
+++ b/api/build.gradle
@@ -106,8 +106,10 @@ dependencies {
     compile group: 'org.springframework.retry', name: 'spring-retry'
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '2.2.1.RELEASE'
 //    will change to 2.3.0 once published to jitpack
-    implementation 'com.github.hmcts.ccfr-fees-register-app:fees-register-api-contract:2.3.9vp'
-    implementation 'com.github.hmcts.ccfr-fees-register-app:fees-register-model:2.3.9vp'
+    implementation 'com.github.hmcts.ccfr-fees-register-app:fees-register-api-contract:2.3.8vp'
+    implementation 'com.github.hmcts.ccfr-fees-register-app:fees-register-model:2.3.8vp'
+//    compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-api-contract', version: '2.3.0'
+//    compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-model', version: '2.3.0'
     compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.0.4'
     //Added this for spring boot upgrade as swagger was not working with the latest version.
     compile group: 'org.springframework.plugin', name: 'spring-plugin-core', version: '1.2.0.RELEASE'
