--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,10 @@ allprojects {
     repositories {
         mavenLocal()
         mavenCentral()
-        jcenter()
         maven { url 'https://jitpack.io' }
+        jcenter()
         maven { url "https://dl.bintray.com/hmcts/hmcts-maven" }
+        maven { url 'https://repo.spring.io/libs-milestone' }
     }
 
     apply from: "${rootDir}/cve-resolution-strategy.gradle"
