--- a/api/src/main/resources/bootstrap.yaml
+++ b/api/src/main/resources/bootstrap.yaml
@@ -44,4 +44,4 @@ spring:
         pci-pal-antenna-probate-flow-id: pci-pal.antenna.probate.flow.id
         pci-pal-antenna-divorce-flow-id: pci-pal.antenna.divorce.flow.id
         pci-pal-antenna-financial-remedy-flow-id: pci-pal.antenna.financial.remedy.flow.id
-        payment-spring-mail-password: spring.mail.password
+        spring-mail-password: spring.mail.password
