Updated chart values to point to sendgrid

--- a/charts/payment-api/values.preview.template.yaml
+++ b/charts/payment-api/values.preview.template.yaml
@@ -34,5 +34,6 @@ java:
         - pci-pal-antenna-probate-flow-id
         - pci-pal-antenna-divorce-flow-id
         - pci-pal-antenna-financial-remedy-flow-id
+        - spring-mail-password
   postgresql:
     enabled: true
